<resources>
    <string name="app_name">DD COVID-19</string>

    <string name="splash_screen_copyright">Copyright © 2020 | Vizain Dev</string>

    <string name="optional_ya">Ya</string>
    <string name="optional_tidak">Tidak</string>

    <string name="home_header">Diagnosa Digital COVID-19</string>
    <string name="home_sub_header">Ayo kita terapkan protokol kesehatan kapanpun dan dimanapun berada, agar kita semua terhindar dari virus serta penyakit menular.</string>
    <string name="home_btn_mulai_diagnosa">Mulai Diagnosa</string>
    <string name="home_btn_hasil_sebelumnya">Lihat Hasil Sebelumnya</string>
    <string name="home_informasi_lain">Informasi Lain</string>
    <string name="home_tentang_covid">Tentang COVID-19</string>
    <string name="home_sub_tc">Update terbaru perkembangan di Indonesia dan cara mencegahnya.</string>
    <string name="home_profil_developer">Profil Developer</string>
    <string name="home_sub_pd">Informasi tentang Developer yang mengembangkan aplikasi ini.</string>

    <string name="start_diagnose_header">Pertanyaan Diagnosa</string>
    <string name="start_diagnose_sub_header">Silahkan Anda pilih YA atau TIDAK sesuai dengan gejala yang Anda alami sekarang.</string>
    <string name="start_diagnose_apakah_anda">Apakah Anda mengalami</string>
    <string name="start_diagnose_pertanyaan">(Pertanyaan)</string>
    <string name="start_diagnose_next">Pertanyaan Selanjutnya</string>
    <string name="start_diagnose_previous">Pertanyaan Sebelumnya</string>
    <string name="start_diagnose_alert_dialog_header">Diagnosa Sedang Berlangsung</string>
    <string name="start_diagnose_alert_dialog_sub_header">Apakah Anda ingin keluar?</string>

    <string name="result_header">Hasil Diagnosa</string>
    <string name="result_sub_header">Dilihat dari hasil diagnosa secara keseluruhan, menunjukkan bahwa Anda</string>
    <string name="result_home">Kembali ke Beranda</string>
    <string name="result_mengalami">(Mengalami)</string>
    <string name="result_kepastian">Maka, dapat dipastikan bahwa</string>
    <string name="result_keterangan">(Keterangan)</string>
    <string name="result_header_saran_kami">Saran Kami</string>
    <string name="result_saran_kami">(Saran Kami)</string>

    <string name="previous_result_header">Hasil Diagnosa Sebelumnya</string>

    <string name="data_covid_sumber_data">Sumber Data : http://api.kawalcorona.com/indonesia</string>
    <string name="lihat_hasil_text">Lihat Hasil</string>

    <string name="data_covid_header">Tentang COVID-19</string>
    <string name="data_covid_tanggal">Tanggal</string>
    <string name="data_covid_indonesia">Data Indonesia</string>
    <string name="data_covid_bulan">Bulan</string>
    <string name="data_covid_positif">Total Terkonfirmasi</string>
    <string name="data_covid_dirawat">Dirawat</string>
    <string name="data_covid_sembuh">Sembuh</string>
    <string name="data_covid_meninggal">Meninggal</string>
    <string name="villa_mukti_indiyanto">Villa Mukti Indiyanto</string>
    <string name="s1_informatika">S1 - Informatika</string>
    <string name="universitas_bhayangkara_jakarta">Universitas Bhayangkara Jakarta</string>
    <string name="sosmed_vllami">Instagram : vllami</string>
    <string name="nur_zain_pradana">Nur Zain Pradana</string>
    <string name="d3_manajemen_informatika">D3 - Manajemen Informatika</string>
    <string name="stmik_bani_saleh">STMIK Bani Saleh</string>
    <string name="github_nurzainpradana">Github : nurzainpradana</string>
    <string name="sosmed_nur_zain_pradana">LinkedIn : Nur Zain Pradana</string>
</resources>