<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF2"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.developerprofile.AboutTeamActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/radio_no_selected">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoDev"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/foto_zain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/fotoDev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tvNamaDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nur_zain_pradana"
                android:fontFamily="@font/nunito_black"
                android:textColor="@color/colorBlue" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d3_manajemen_informatika"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stmik_bani_saleh"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github_nurzainpradana"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sosmed_nur_zain_pradana"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/radio_no_selected"
        android:layout_marginTop="@dimen/_16sdp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoDev2"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/foto_vllami"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/fotoDev2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tvNamaDev2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/villa_mukti_indiyanto"
                android:fontFamily="@font/nunito_black"
                android:textColor="@color/colorBlue" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s1_informatika"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/universitas_bhayangkara_jakarta"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Github : vllami"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sosmed_vllami"
                android:fontFamily="@font/nunito_light"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_8sdp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>