<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF2"
    tools:context=".ui.ResultActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/nunito_black"
        android:lineHeight="34dp"
        android:text="@string/result_header"
        android:textColor="#4B4B53"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />

    <TextView
        android:id="@+id/penjelasan"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nunito"
        android:lineHeight="27dp"
        android:text="@string/result_sub_header"
        android:textColor="#4B4B53"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_beranda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/result_mengalami"
        android:textColor="#4B4B53"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/kepastian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/penjelasan"
        app:layout_constraintVertical_bias="0.506"
        tools:ignore="MissingConstraints,RelativeOverlap,RtlSymmetry" />

    <TextView
        android:id="@+id/kepastian"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nunito"
        android:lineHeight="27dp"
        android:text="@string/result_kepastian"
        android:textColor="#4B4B53"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/keterangan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/penjelasan"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />

    <ImageView
        android:id="@+id/dokter"
        android:layout_width="139dp"
        android:layout_height="217dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:background="@drawable/img_doctor"
        app:layout_constraintBottom_toTopOf="@+id/keterangan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/keterangan"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:text="@string/result_keterangan"
        android:textColor="#4B4B53"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RelativeOverlap,RtlSymmetry"
        tools:layout_editor_absoluteX="34dp" />

    <RelativeLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_beranda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keterangan"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/header_saran_kami"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:paddingTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/result_header_saran_kami"
            android:textColor="#4B4B53"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/saran_kami"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_saran_kami"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-28dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito"
            android:paddingBottom="120dp"
            android:text="@string/result_saran_kami"
            android:textColor="#4B4B53"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_saran_kami"
            tools:ignore="MissingConstraints" />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_beranda"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/rounded_primary_button"
        android:fontFamily="@font/nunito_extrabold"
        android:onClick="btnBeranda"
        android:text="@string/result_home"
        android:textAllCaps="false"
        android:textColor="#DDEFF8"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>